--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Axel Github Browser</string>
+    <string name="error_occurred">Some Error Occurred</string>
 </resources>
